Fix estilos visibility

--- a/apps/client/src/Pages/dashboard/Editor/settings/visibility.css
+++ b/apps/client/src/Pages/dashboard/Editor/settings/visibility.css
@@ -16,9 +16,9 @@
   height: 40px;
   display: flex;
   align-items: center;
-  padding-top: 4px;
+  padding: 4px 6px;
   flex-direction: row;
-  padding-bottom: 4px;
+
   justify-content: space-between;
   font-weight: 500;
   &:hover {
@@ -69,13 +69,14 @@
 .visibility-range-bar {
   width: 100%;
   height: 2px;
+  background-color: #ddd;
 }
 
 .visibility-range-bar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 5px;
-  height: 5px;
+  /* -webkit-appearance: none; */
+  /* appearance: none; */
+  width: 2px;
+  height: 2px;
   cursor: pointer;
 }
 
